host based indexers vs uri
introduce an abstract host based indexer that serves as base for most
indexers. Elastic search uses a uri approach where we need scheme, host,
port and url path, so we allow to configure a uri instead.